@@ -3,6 +3,7 @@ package com.mytech.apartment.portal.services;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -14,10 +15,12 @@ import com.mytech.apartment.portal.mappers.ApartmentResidentMapper;
 import com.mytech.apartment.portal.models.Apartment;
 import com.mytech.apartment.portal.models.ApartmentResident;
 import com.mytech.apartment.portal.models.ApartmentResidentId;
+import com.mytech.apartment.portal.models.Building;
 import com.mytech.apartment.portal.models.User;
 import com.mytech.apartment.portal.models.enums.RelationType;
 import com.mytech.apartment.portal.repositories.ApartmentRepository;
 import com.mytech.apartment.portal.repositories.ApartmentResidentRepository;
+import com.mytech.apartment.portal.repositories.BuildingRepository;
 import com.mytech.apartment.portal.repositories.UserRepository;
 
 @Service
@@ -31,10 +34,57 @@ public class ApartmentResidentService {
     private ApartmentRepository apartmentRepository;
 
     @Autowired
-    private UserRepository userRepository;
+    private BuildingRepository buildingRepository;
+    
+    @Autowired
+    private com.mytech.apartment.portal.repositories.UserRepository userRepository;
 
     @Autowired
     private ApartmentResidentMapper apartmentResidentMapper;
+
+    public List<ApartmentResidentDto> getAllApartmentResidents() {
+        return apartmentResidentRepository.findAll().stream()
+                .map(entity -> {
+                    ApartmentResidentDto dto = apartmentResidentMapper.toDto(entity);
+                    // Bổ sung thông tin đầy đủ
+                    enhanceApartmentResidentDto(dto);
+                    return dto;
+                })
+                .collect(Collectors.toList());
+    }
+
+    public Optional<ApartmentResidentDto> getApartmentResidentById(Long apartmentId, Long userId) {
+        ApartmentResidentId id = new ApartmentResidentId(apartmentId, userId);
+        return apartmentResidentRepository.findById(id).map(apartmentResidentMapper::toDto);
+    }
+
+    public List<ApartmentResidentDto> getApartmentResidentsByUserId(Long userId) {
+        return apartmentResidentRepository.findByIdUserId(userId).stream() // Changed from findByIdResidentId to findByIdUserId
+                .map(entity -> {
+                    ApartmentResidentDto dto = apartmentResidentMapper.toDto(entity);
+                    // Bổ sung thông tin đầy đủ
+                    enhanceApartmentResidentDto(dto);
+                    return dto;
+                })
+                .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public ApartmentResidentDto addResidentToApartment(ApartmentResidentDto dto) {
+        ApartmentResident entity = apartmentResidentMapper.toEntity(dto);
+        // Additional validation can be done here (e.g., check if apartment and resident exist)
+        ApartmentResident savedEntity = apartmentResidentRepository.save(entity);
+        return apartmentResidentMapper.toDto(savedEntity);
+    }
+
+    @Transactional
+    public void removeResidentFromApartment(Long apartmentId, Long userId) {
+        ApartmentResidentId id = new ApartmentResidentId(apartmentId, userId);
+        if (!apartmentResidentRepository.existsById(id)) {
+            throw new RuntimeException("Apartment-Resident relationship not found");
+        }
+        apartmentResidentRepository.deleteById(id);
+    }
 
     // Tạo mối quan hệ mới giữa user và apartment
     public ApartmentResidentDto createApartmentResident(ApartmentResidentCreateRequest request) {
@@ -58,17 +108,7 @@ public class ApartmentResidentService {
                 .moveInDate(request.getMoveInDate())
                 .moveOutDate(request.getMoveOutDate())
                 .isPrimaryResident(request.getIsPrimaryResident())
-                .createdAt(LocalDateTime.now())
                 .build();
-
-        // Nếu đây là cư dân chính, cập nhật các cư dân khác thành không chính
-        if (Boolean.TRUE.equals(request.getIsPrimaryResident())) {
-            apartmentResidentRepository.findByApartment_IdAndIsPrimaryResidentTrue(request.getApartmentId())
-                    .ifPresent(existing -> {
-                        existing.setIsPrimaryResident(false);
-                        apartmentResidentRepository.save(existing);
-                    });
-        }
 
         ApartmentResident saved = apartmentResidentRepository.save(apartmentResident);
         return apartmentResidentMapper.toDto(saved);
@@ -76,34 +116,30 @@ public class ApartmentResidentService {
 
     // Lấy tất cả cư dân của một căn hộ
     public List<ApartmentResidentDto> getResidentsByApartment(Long apartmentId) {
-        List<ApartmentResident> residents = apartmentResidentRepository.findByApartment_Id(apartmentId);
-        return residents.stream()
+        return apartmentResidentRepository.findByApartment_Id(apartmentId).stream()
                 .map(apartmentResidentMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Lấy tất cả căn hộ của một user
     public List<ApartmentResidentDto> getApartmentsByUser(Long userId) {
-        List<ApartmentResident> apartments = apartmentResidentRepository.findByUser_Id(userId);
-        return apartments.stream()
+        return apartmentResidentRepository.findByUser_Id(userId).stream()
                 .map(apartmentResidentMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Lấy căn hộ theo loại quan hệ
     public List<ApartmentResidentDto> getApartmentsByUserAndRelationType(Long userId, RelationType relationType) {
-        List<ApartmentResident> apartments = apartmentResidentRepository.findByUser_IdAndRelationType(userId, relationType);
-        return apartments.stream()
+        return apartmentResidentRepository.findByUser_IdAndRelationType(userId, relationType).stream()
                 .map(apartmentResidentMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Lấy chủ sở hữu của căn hộ
     public List<ApartmentResidentDto> getOwnersByApartment(Long apartmentId) {
-        List<ApartmentResident> owners = apartmentResidentRepository.findByApartment_IdAndRelationType(apartmentId, RelationType.OWNER);
-        return owners.stream()
+        return apartmentResidentRepository.findByApartment_IdAndRelationType(apartmentId, RelationType.OWNER).stream()
                 .map(apartmentResidentMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // Lấy cư dân chính của căn hộ
@@ -127,14 +163,59 @@ public class ApartmentResidentService {
         existing.setMoveOutDate(request.getMoveOutDate());
         existing.setIsPrimaryResident(request.getIsPrimaryResident());
 
-        ApartmentResident updated = apartmentResidentRepository.save(existing);
-        return apartmentResidentMapper.toDto(updated);
+        ApartmentResident saved = apartmentResidentRepository.save(existing);
+        return apartmentResidentMapper.toDto(saved);
     }
 
     // Xóa mối quan hệ
     public void deleteApartmentResident(Long apartmentId, Long userId) {
-        ApartmentResidentId id = new ApartmentResidentId(apartmentId, userId);
-        apartmentResidentRepository.deleteById(id);
+        apartmentResidentRepository.deleteByApartment_IdAndUser_Id(apartmentId, userId);
+    }
+
+    /**
+     * Get apartment residents by apartment ID
+     * Lấy danh sách cư dân theo ID căn hộ
+     */
+    public List<ApartmentResidentDto> getApartmentResidentsByApartmentId(Long apartmentId) {
+        return apartmentResidentRepository.findByIdApartmentId(apartmentId).stream()
+                .map(entity -> {
+                    ApartmentResidentDto dto = apartmentResidentMapper.toDto(entity);
+                    // Bổ sung thông tin đầy đủ
+                    enhanceApartmentResidentDto(dto);
+                    return dto;
+                })
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Enhance ApartmentResidentDto with full user and apartment information
+     * Bổ sung thông tin đầy đủ cho ApartmentResidentDto
+     */
+    private void enhanceApartmentResidentDto(ApartmentResidentDto dto) {
+        // Bổ sung thông tin user
+        User user = userRepository.findById(dto.getUserId()).orElse(null);
+        if (user != null) {
+            dto.setUserFullName(user.getFullName());
+            dto.setUserPhoneNumber(user.getPhoneNumber());
+            dto.setUserEmail(user.getEmail());
+            dto.setUserAvatarUrl(user.getAvatarUrl());
+            dto.setUserStatus(user.getStatus().name());
+        }
+
+        // Bổ sung thông tin căn hộ
+        Apartment apartment = apartmentRepository.findById(dto.getApartmentId()).orElse(null);
+        if (apartment != null) {
+            dto.setUnitNumber(apartment.getUnitNumber());
+            dto.setApartmentStatus(apartment.getStatus().name());
+            dto.setApartmentArea(apartment.getArea());
+            dto.setApartmentFloorNumber(apartment.getFloorNumber());
+            
+            // Bổ sung thông tin tòa nhà
+            Building building = buildingRepository.findById(apartment.getBuildingId()).orElse(null);
+            if (building != null) {
+                dto.setBuildingName(building.getBuildingName());
+            }
+        }
     }
 
     // Đếm số cư dân của căn hộ
